# doubting-machine

./: MANIFEST.in  README.md  pyproject.toml
src/doubting_machine/: cli.py  config.py  machina.yaml
