[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "doubting-machine"
version = "0.0.1"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
]
description = "A Machine that doubts each an every sentence of the context."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

keywords = ["doubting-machine"]

dependencies = [
    "electroid >= 0.0.16",
    "opehaina >= 0.0.1",
    "PyGithub >= 2.6.0",
    "PyYAML >= 6.0.1",
    "urllib3 >= 2.0.4",
    "requests >= 2.32.3",
    "click >= 8.3.0"
]

[project.scripts]
doubting-machine = "doubting_machine.cli:run"

[project.urls]
"Homepage" = "https://github.com/doubting-machine/doubting-machine"
"Bug Tracker" = "https://github.com/doubting-machine/doubting-machine/issues"